src/rules/snapshots/test__default_convert_local_function_to_assign.snap
---
source: src/rules/no_local_function.rs
expression: new_rule()
---
"convert_local_function_to_assign"
