src/rules/snapshots/test__default_rules.snap
---
source: src/rules/mod.rs
expression: rules
---
[
  "remove_unused_if_branch",
  "remove_unused_while",
  "remove_empty_do",
  "remove_method_definition",
  "convert_local_function_to_assign",
  "group_local_assignment",
  "rename_variables",
  "remove_function_call_parens"
]
