src/rules/snapshots/test__inject_false_value_as_foo.snap
---
source: src/rules/inject_value.rs
expression: rule
---
{
  "rule": "inject_global_value",
  "identifier": "foo",
  "value": false
}
